# rchore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs
.github/: CODEOWNERS  ISSUE_TEMPLATE  pull_request_template.md
.github/workflows/: CrossPlatformBuilder.yaml  Releaser.yaml
src/: api.rs  cli.rs  controller.rs  main.rs  oauth.rs  printer.rs  secrets.rs  tasks.rs  tui.rs
src/handlers/: misc_handler.rs  mod.rs  task_handler.rs  tasklist_handler.rs
src/models/: mod.rs  tasklist.rs  tasks.rs
src/service/: database_api.rs  google_api.rs  google_tasklist.rs  google_tasks.rs  mod.rs  offline_service.rs
