[package]
name = "rchore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
serde_json = "1.0.64"    

[dependencies.serde]  
version = "1.0.64"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"] 
