[package]
name = "rchore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
oauth2 = "4.1"
anyhow = "1.0.42"
home = "0.5.3"
structopt = "0.3.22"
serde_json = "1.0.64"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dialoguer = "0.8.0"
console = "0.14.1"

[dependencies.serde]  
version = "1.0.64"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"] 
