[package]
name = "rchore"
version = "0.1.0"
authors = ["Hemanth Krishna <hkpdev008@gmail.com>"]
license = "MIT"
description = "A feature packed unofficial Google Tasks API written in Rust"
readme = "README.md"
homepage = "https://github.com/DarthBenro008/rchore"
repository = "https://github.com/DarthBenro008/rchore"
keywords = ["cli", "tasks", "google-tasks", "productivity"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
oauth2 = "4.1"
anyhow = "1.0.42"
home = "0.5.3"
structopt = "0.3.22"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dialoguer = "0.8.0"
console = "0.14.1"
sled = "0.34.6"
bincode = "1.3.3"
prettytable-rs = "0.8.0"

[dependencies.serde]  
version = "1.0.64"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"] 

[build-dependencies]
dotenv = "0.15.0"
